test/expect/cmd.cc-option.stderr.txt
^error: argument to '--castxml-cc-gnu' may not start with '-'

Usage: castxml .*$
